RD-2007-07-27-0: Bugfix:    - fixed dtrace test
                 Enhancem.: - added more complex range list for AR in
                              qmaster/spooling test
                 Review:    JG

JG-2007-07-27-0: Bugfix:    Fixed set_complex, cleanup.
                 Review:    MD

CR-2007-07-26-0: Enhancme.: o added hedeby installation support and a test
                              for issue 67
                 Review:    TBD

CR-2007-07-25-0: Enhancem.: o fixed some parsing errors
                            o added "*.sav.*" and "*.sav" to .cvsignore file
                            o removed setting of shared library path in 
                              enhanced_setup() procedure (global check.exp)
                            o fixed wrong file length in get_file_content()
                 Review:    RD

AP-2007-07-23-0: Bugfix:    testsuite configuration procedures should use 
                            config_generic
                 Issue:     133

RD-2007-07-23-0: Bugfix:    fixed wrong dynamic library path on darwin
                 Review:    JG

JO-2007-07-20-0: Bugfix:    Changed order in which views are dropped to reflect
                            new dependencies
                 Review:    JP

LP-2007-07-20-0: Enhancem:  Improved jgdi_shell tests
                 Review:    PJ

AP-2007-07-19-0: Bugfix:    Error when modifying additional checktree directory 
                            items.
                 Issue:     135

RD-2007-07-18-0: Enhancem:  Added test for AR resource reservation
                 Review:    JG

JG-2007-07-16-0: Bugfix:    Fixed installation in CSP mode.
                 Review:    CR

JG-2007-07-16-0: Bugfix:    Fixed drmaaj test.
                 Review:    CR

JG-2007-07-12-0: Bugfix:    Fixes for usage test, modifying checkpoint objects,
                            modifying projects, cleanup.
                 Review:    MD

PJ-2007-07-11-0: Enhancem.: qsh, qrsh, qlogin -ar tests