@@ -80,8 +80,8 @@ proc issue_1141_run {} {
 #  client can reconnect, bug 1141 is not present.
 
    set issue_1141_environment(SGE_PRODUCE_ALIVE_TIMEOUT_ERROR) 1
-   
-   set client_sid [open_remote_spawn_process $ts_config(master_host) "ts_def_con" $client_binary $client_args 0 "" issue_1141_environment]
+
+   set client_sid [open_remote_spawn_process $ts_config(master_host) "ts_def_con" $client_binary $client_args 0 "" issue_1141_environment 0 15 1]
    set client_id  [lindex $client_sid 1]
 
    set in_loop 1
