@@ -134,22 +134,15 @@ proc issue_1802_test {} {
    global ts_config CHECK_OUTPUT
    global CHECK_OUTPUT ts_config CHECK_USER
 
-
-#   This test is only working for csp systems, so only act if the csp feature
-#   is enabled ...
-#
-
+   # This test is only working for csp systems, so only act if the csp feature
+   # is enabled ...
    if {[string match "*csp*" $ts_config(product_feature)] != 1} {
       add_proc_error "issue_1802_test" -3 "This test only works for csp gridengine systems - break"
    } else {
       set sge_ca_bin "$ts_config(product_root)/util/sgeCA/sge_ca"
       set USER_CERT_EXPIRED [translate_macro MSG_CL_COMMLIB_SSL_ERROR_336151573]
       set SSL_HS_ERROR [translate_macro MSG_CL_COMMLIB_SSL_HANDSHAKE_ERROR]
-      if {$ts_config(gridengine_version) == 60} {
-         set UNABLE_CONNECT [translate_macro MSG_GDI_UNABLE_TO_CONNECT_SUS "qmaster" $ts_config(commd_port) "*" ]
-      } else {
-         set UNABLE_CONNECT [translate_macro MSG_GDI_CANT_SEND_MSG_TO_PORT_ON_HOST_SUSS "qmaster" $ts_config(commd_port) "*" "*"]
-      }
+      set UNABLE_CONNECT [translate_macro MSG_GDI_UNABLE_TO_CONNECT_SUS "qmaster" $ts_config(commd_port) "*" ]
 
       puts $CHECK_OUTPUT "starting qstat -f ..."
       set output [start_sge_bin "qstat" "-f" $ts_config(master_host)]
